refactored Artist to contain a collection of Artists rather than a list of String.  Built a method to get location of the band and added a compound band to the test collection for the exercise.